name:                q-coding
version:             0.1.0.0
synopsis:            Wrangling data about my coding habits.
description:         Please see README.md
homepage:            https://github.com/yurrriq/q-coding#readme
license:             BSD3
license-file:        LICENSE
author:              Eric Bailey
maintainer:          eric@ericb.me
copyright:           Copyright: (c) 2016 Eric Bailey
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.WakaTime.Types
  build-depends:       base       >= 4.7    && < 5
                     , aeson      >= 0.11.2 && < 1
                     , text       >= 1.2.2  && < 1.3
  default-language:    Haskell2010

executable q-coding-demo
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , q-coding
                     , aeson
                     , bytestring >= 0.10.6 && < 0.11
  default-language:    Haskell2010

test-suite q-coding-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , q-coding
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/yurrriq/q-coding
